--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>My Work Showcase</title>
+</head>
+<body>
+  <h1>Markdown Showcase Page</h1>
+  <p>This page demonstrates my understanding of HTML and GitHub Pages deployment.</p>
+  <p>Contact: <!--email_off-->23f2000485@ds.study.iitm.ac.in<!--/email_off--></p>
+</body>
+</html>
